# analysis_helpers

./: CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml  run_tests.sh
.github/workflows/: docs.yml  tests.yml
cpp/bindings/: module.cpp
cpp/include/: LinkDef.h  RooThreshold.h  RooThresholdDAcp.h
cpp/src/: RooThreshold.cpp  RooThresholdDAcp.cpp
cpp/tests/: test_roo_threshold.cpp
docs/: index.md
docs/api/: asymmetry.md  dalitz.md  efficiency.md  fit.md  index.md  io.md  kinematics.md  latex.md  plotting.md  root_helpers.md  utils.md
docs/javascripts/: katex.js  mathjax.js
docs/notebooks/: dalitz_plot.ipynb  fit.ipynb  getting_started.ipynb  index.md  kinematics_quickstart.ipynb  plots.ipynb
scripts/: uv-root
src/analysis_helpers/: __init__.py  _root_import.py  asymmetry.py  binning.py  dalitz.py  efficiency.py  fit.py  io.py  kinematics.py  plotting.py  root_helpers.py  selection_metrics.py  utils.py
src/analysis_helpers/_cpp/: __init__.py
tests/: test_asymmetry.py  test_binning.py  test_cpp_bindings.py  test_dalitz.py  test_efficiency.py  test_fit.py  test_io.py  test_kinematics.py  test_plotting.py  test_root_helpers.py  test_utils.py
