[project]
name = "analysis_helpers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "awkward>=2.0",
    "matplotlib>=3.10.9",
    "mplhep>=1.1.2",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "uproot>=5.7.4",
    "vector>=1.4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-jupyter>=0.24",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
